--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -63,7 +63,7 @@
     "LabelSyncTempPath": "Percorso file temporanei",
     "LabelSyncTempPathHelp": "Specifica una cartella per la sincronizzazione. I file multimediali convertiti durante la sincronizzazione verranno collocati qui.",
     "LabelCustomCertificatePath": "Percorso certificati personalizzato:",
-    "LabelCustomCertificatePathHelp": "Supply your own ssl certificate .pfx file. If omitted, the server will create a self-signed certificate.",
+    "LabelCustomCertificatePathHelp": "Fornire un tuo file .pfx certificato SSL. Se omesso, il server creer\u00e0 un certificato auto-firmato.",
     "TitleNotifications": "Notifiche",
     "ButtonDonateWithPayPal": "Effettua una donazione con PayPal",
     "OptionDetectArchiveFilesAsMedia": "Considera gli archivi come file multimediali",
@@ -285,10 +285,10 @@
     "ButtonHelp": "Aiuto",
     "OptionAllowUserToManageServer": "Consenti a questo utente di accedere alla configurazione del SERVER",
     "HeaderFeatureAccess": "Accesso alle funzionalit\u00e0",
-    "OptionAllowMediaPlayback": "Allow media playback",
-    "OptionAllowBrowsingLiveTv": "Allow Live TV access",
-    "OptionAllowDeleteLibraryContent": "Allow media deletion",
-    "OptionAllowManageLiveTv": "Allow Live TV recording management",
+    "OptionAllowMediaPlayback": "Consentire la riproduzione multimediale",
+    "OptionAllowBrowsingLiveTv": "Consenti accesso TV Live",
+    "OptionAllowDeleteLibraryContent": "Consenti l'eliminazione dei media",
+    "OptionAllowManageLiveTv": "Consenti la gestione di registrazione Live TV",
     "OptionAllowRemoteControlOthers": "Consenti controllo remoto di altri utenti",
     "OptionAllowRemoteSharedDevices": "Consenti controllo remoto di dispositivi condivisi",
     "OptionAllowRemoteSharedDevicesHelp": "Dispositivi DLNA sono considerati condivisa fino a quando un utente inizia controllarlo.",
@@ -891,7 +891,7 @@
     "MessageNoPlaylistsAvailable": "Playlist ti permettere di mettere in coda gli elementi da riprodurre.Usa il tasto destro o tap e tieni premuto quindi seleziona elemento da aggiungere",
     "MessageNoPlaylistItemsAvailable": "Questa playlist al momento \u00e8 vuota",
     "ButtonDismiss": "Cancella",
-    "ButtonEditOtherUserPreferences": "Edit this user's profile, image and personal preferences.",
+    "ButtonEditOtherUserPreferences": "Modifica questo utente di profilo, l'immagine e le preferenze personali.",
     "LabelChannelStreamQuality": "Preferenziale qualit\u00e0 del flusso internet:",
     "LabelChannelStreamQualityHelp": "In un ambiente a bassa larghezza di banda, limitando la qualit\u00e0 pu\u00f2 contribuire a garantire un'esperienza di streaming continuo.",
     "OptionBestAvailableStreamQuality": "Migliore disponibile",
@@ -1101,6 +1101,7 @@
     "MessageApplicationUpdated": "Media Browser Server \u00e8 stato aggiornato",
     "AuthenticationSucceededWithUserName": "{0} Autenticati con successo",
     "FailedLoginAttemptWithUserName": "Login fallito da  {0}",
+    "UserDownloadingItemWithValues": "{0} sta scaricando {1}",
     "UserStartedPlayingItemWithValues": "{0} \u00e8 partito da {1}",
     "UserStoppedPlayingItemWithValues": "{0} stoppato {1}",
     "AppDeviceValues": "App: {0}, Dispositivo: {1}",
@@ -1338,19 +1339,19 @@
     "HeaderVideoTypes": "Tipi Video",
     "HeaderYears": "Anni",
     "HeaderAddTag": "Aggiungi Tag",
-    "LabelBlockContentWithTags": "Block content with tags:",
+    "LabelBlockContentWithTags": "Blocco dei contenuti con le etichette:",
     "LabelTag": "Tag:",
     "LabelEnableSingleImageInDidlLimit": "Limitato a singola immagine incorporata",
     "LabelEnableSingleImageInDidlLimitHelp": "Alcuni dispositivi non renderanno correttamente se pi\u00f9 immagini sono incorporati all'interno didl.",
     "TabActivity": "Attivit\u00e0",
     "TitleSync": "Sincronizza",
-    "OptionAllowSyncContent": "Allow Sync",
-    "OptionAllowContentDownloading": "Allow media downloading",
+    "OptionAllowSyncContent": "Consenti Sync",
+    "OptionAllowContentDownloading": "Consenti media download",
     "NameSeasonUnknown": "Stagione sconosciuto",
     "NameSeasonNumber": "Stagione {0}",
     "LabelNewUserNameHelp": "I nomi utente possono contenere lettere (az), numeri (0-9), trattini (-), underscore (_), apostrofi ('), e periodi (.)",
     "TabJobs": "Attivit\u00e0",
     "TabSyncJobs": "Attiv. di Sinc.",
-    "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "LabelTagFilterMode": "Modalit\u00e0:",
+    "LabelTagFilterAllowModeHelp": "Se i tag permessi vengono utilizzati come parte di una struttura di cartelle profondamente nidificate, il contenuto che viene etichettato richieder\u00e0 cartelle principali di essere etichettato come bene."
 }
