--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -288,7 +288,7 @@
     "OptionAllowMediaPlayback": "Media afspelen toestaan",
     "OptionAllowBrowsingLiveTv": "Live TV toegang toestaan",
     "OptionAllowDeleteLibraryContent": "Media verwijderen toestaan",
-    "OptionAllowManageLiveTv": "Allow Live TV recording management",
+    "OptionAllowManageLiveTv": "Sta Live TV opname beheer toe",
     "OptionAllowRemoteControlOthers": "Op afstand besturen van andere gebruikers toestaan",
     "OptionAllowRemoteSharedDevices": "Op afstand besturen van gedeelde apparaten toestaan",
     "OptionAllowRemoteSharedDevicesHelp": "Dlna apparaten worden als gedeeld apparaat gezien totdat een gebruiker deze gaat gebruiken.",
@@ -885,13 +885,13 @@
     "OptionCommunityMostWatchedSort": "Meest bekeken",
     "TabNextUp": "Volgend",
     "HeaderBecomeMediaBrowserSupporter": "Word een Media Browser Supporter",
-    "TextEnjoyBonusFeatures": "Enjoy Bonus Features",
+    "TextEnjoyBonusFeatures": "Geniet van Bonus Features",
     "MessageNoMovieSuggestionsAvailable": "Er zijn momenteel geen film suggesties beschikbaar. Begin met het bekijken en waardeer uw films, kom daarna terug om uw aanbevelingen te bekijken.",
     "MessageNoCollectionsAvailable": "Collecties maken het u mogelijk om Films, Series, Albums, Boeken en Games te groeperen. Klik op de + knop om Collecties aan te maken.",
     "MessageNoPlaylistsAvailable": "Met afspeellijsten kunt u een lijst maken waarvan de items achter elkaar afgespeeld worden. Om een item toe te voegen klikt u met rechts of tik en houd het vast om het te selecteren, klik vervolgens op Toevoegen aan afspeellijst.",
     "MessageNoPlaylistItemsAvailable": "De afspeellijst is momenteel leeg.",
     "ButtonDismiss": "Afwijzen",
-    "ButtonEditOtherUserPreferences": "Edit this user's profile, image and personal preferences.",
+    "ButtonEditOtherUserPreferences": "Wijzig het profiel, afbeelding en persoonlijke voorkeuren van deze gebruiker.",
     "LabelChannelStreamQuality": "Voorkeurs kwaliteit internet stream:",
     "LabelChannelStreamQualityHelp": "Bij weinig beschikbare bandbreedte kan het verminderen van de kwaliteit betere streams opleveren.",
     "OptionBestAvailableStreamQuality": "Best beschikbaar",
@@ -950,9 +950,9 @@
     "LabelProtocolInfo": "Protocol info:",
     "LabelProtocolInfoHelp": "De waarde die wordt gebruikt bij het reageren op GetProtocolInfo verzoeken van het apparaat.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
+    "HeaderKodiMetadataHelp": "Media Browser ondersteund NFO metadata bestanden. Gebruik het tabblad geavanceerd om het gebruik NFO metadata aan of uit te zetten.",
     "LabelKodiMetadataUser": "Synchroniseer gekeken informatie toe aan NFO's voor (gebruiker):",
-    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
+    "LabelKodiMetadataUserHelp": "Inschakelen om de bekijk gegevens tussen Media Browser en NFO bestanden te synchroniseren.",
     "LabelKodiMetadataDateFormat": "Uitgave datum formaat:",
     "LabelKodiMetadataDateFormatHelp": "Alle datums in NFO's zullen gelezen en geschreven worden met dit formaat.",
     "LabelKodiMetadataSaveImagePaths": "Bewaar afbeeldingspaden in NFO-bestanden",
@@ -1101,7 +1101,7 @@
     "MessageApplicationUpdated": "Media Browser Server is bijgewerkt",
     "AuthenticationSucceededWithUserName": "{0} is succesvol geverifieerd",
     "FailedLoginAttemptWithUserName": "Mislukte aanmeld poging van {0}",
-    "UserDownloadingItemWithValues": "{0} is downloading {1}",
+    "UserDownloadingItemWithValues": "{0} download {1}",
     "UserStartedPlayingItemWithValues": "{0} heeft afspelen van {1} gestart",
     "UserStoppedPlayingItemWithValues": "{0} heeft afspelen van {1} gestopt",
     "AppDeviceValues": "App: {0}, Apparaat: {1}",
@@ -1119,9 +1119,9 @@
     "ViewTypeLiveTvRecordingGroups": "Opnamen",
     "ViewTypeLiveTvChannels": "Kanalen",
     "LabelEasyPinCode": "Eenvoudige pincode:",
-    "EasyPasswordHelp": "Your easy pin code is used for offline access with supported Media Browser apps, and can also be used for easy in-network sign in.",
-    "LabelInNetworkSignInWithEasyPassword": "Enable in-network sign in with my easy pin code",
-    "LabelInNetworkSignInWithEasyPasswordHelp": "If enabled, you'll be able to use your easy pin code to sign in to Media Browser apps from inside your home network. Your regular password will only be needed away from home. If the pin code is left blank, you won't need a password within your home network.",
+    "EasyPasswordHelp": "Je easy pin code wordt gebruikt voor offline toegang met ondersteunende Media Browser apps en kan ook gebruikt worden voor eenvoudige aanmelding.",
+    "LabelInNetworkSignInWithEasyPassword": "Schakel eenvoudige lokale aanmelding in met mijn easy pin code",
+    "LabelInNetworkSignInWithEasyPasswordHelp": "Als dit ingeschakeld is is het mogelijk om lokaal met je easy pin code Media Browser apps aan te melden. Je gewone wachtwoord is alleen nodig bij toegang buitenshuis. Als de easy pin code leeg is kan je lokaal zonder wachtwoord aanmelden.",
     "HeaderPassword": "Wachtwoord",
     "HeaderLocalAccess": "Lokale toegang",
     "HeaderViewOrder": "Weergave volgorde",
@@ -1353,5 +1353,5 @@
     "TabJobs": "Opdrachten",
     "TabSyncJobs": "Sync Opdrachten",
     "LabelTagFilterMode": "Mode:",
-    "LabelTagFilterAllowModeHelp": "If allowed tags are used as part of a deeply nested folder structure, content that is tagged will require parent folders to be tagged as well."
+    "LabelTagFilterAllowModeHelp": "Als toegestane tags worden gebruikt in een diep geneste mappenstructuur, zal getagde inhoud vereisen dat de bovenliggende mappen ook getagd zijn."
 }
