--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nl.json
@@ -49,14 +49,14 @@
     "ButtonHelp": "Hulp",
     "ButtonSave": "Opslaan",
     "ButtonDownload": "Download",
-    "SyncJobStatusQueued": "Queued",
+    "SyncJobStatusQueued": "In wachtrij",
     "SyncJobStatusConverting": "Converteren",
     "SyncJobStatusFailed": "Mislukt",
     "SyncJobStatusCancelled": "Afgebroken",
     "SyncJobStatusCompleted": "Gesynced",
     "SyncJobStatusReadyToTransfer": "Klaar om te Verzenden",
     "SyncJobStatusTransferring": "Verzenden",
-    "SyncJobStatusCompletedWithError": "Synced with errors",
+    "SyncJobStatusCompletedWithError": "Gesynchroniseerd met fouten",
     "SyncJobItemStatusReadyToTransfer": "Klaar om te Verzenden",
     "LabelCollection": "Collectie",
     "HeaderAddToCollection": "Toevoegen aan Collectie",
@@ -70,7 +70,7 @@
     "HeaderSelectCertificatePath": "Selecteer Certificaat Pad",
     "ConfirmMessageScheduledTaskButton": "Deze operatie loopt normaal gesproken automatisch als een geplande taak. Het kan hier ook handmatig worden uitgevoerd. Om de geplande taak te configureren, zie:",
     "HeaderSupporterBenefit": "Een supporter lidmaatschap biedt voordelen zoals toegang tot premium plug-ins, internet kanalen en meer. {0}Meer weten{1}.",
-    "LabelSyncNoTargetsHelp": "It looks like you don't currently have any apps that support sync.",
+    "LabelSyncNoTargetsHelp": "Het lijkt erop dat je momenteel geen apps hebt die synchroniseren ondersteunen.",
     "HeaderWelcomeToMediaBrowserServerDashboard": "Welkom bij het Media Browser Dashboard",
     "HeaderWelcomeToMediaBrowserWebClient": "Welkom op de Media Browser Web Client",
     "ButtonTakeTheTour": "Volg de tour",
@@ -99,7 +99,7 @@
     "HeaderSelectSubtitles": "Selecteer Ondertitels",
     "ButtonMarkForRemoval": "Van apparaat verwijderen",
     "ButtonUnmarkForRemoval": "Afbreken verwijderen van apparaat",
-    "LabelSyncQualityHelp": "Use high quality for the maximum supported quality by the device. Medium and low quality will reduce the allowed bitrate. Original will sync the original file, regardless of whether the device is capable of playing it or not.",
+    "LabelSyncQualityHelp": "Gebruik hoge kwaliteit om de maximaal ondersteunde kwaliteit van het apparaat te gebruiken. Medium en laad zal de bitrate verlagen. Origineel zal het bestand ongewijzigd synchroniseren, ongeacht op het apparaat het af kan spelen.",
     "LabelDefaultStream": "(Standaard)",
     "LabelForcedStream": "(Geforceerd)",
     "LabelDefaultForcedStream": "(Standaard \/ Georceerd)",
@@ -545,7 +545,7 @@
     "ValueMusicVideoCount": "{0} muziek video's",
     "HeaderOffline": "Offline",
     "HeaderUnaired": "Niet uitgezonden",
-    "HeaderMissing": "Missend",
+    "HeaderMissing": "Ontbreekt",
     "ButtonWebsite": "Website",
     "TooltipFavorite": "Favoriet",
     "TooltipLike": "Leuk",
@@ -646,7 +646,7 @@
     "WebClientTourUserPreferences4": "Configureer achtergronden, theme songs en externe spelers",
     "WebClientTourMobile1": "De web client werk perfect op smartphones en tablets...",
     "WebClientTourMobile2": "en kan elke andere Media Browser app bedienen",
-    "WebClientTourMySync": "Sync your personal media to your devices for offline viewing.",
+    "WebClientTourMySync": "Synchroniseer je persoonlijke media naar je apparaten om het offline te bekijken.",
     "MessageEnjoyYourStay": "Geniet van uw verblijf",
     "DashboardTourDashboard": "Het server-dashboard steld u in staat uw server en uw gebruikers te monitoren . U zult altijd weten wie wat doet en waar ze zijn.",
     "DashboardTourHelp": "De in-app hulp bevat handige knoppen om wiki pagina's te openen die gaan over de informatie op het scherm.",
@@ -658,7 +658,7 @@
     "DashboardTourNotifications": "Meldingen van de server gebeurtenissen automatisch verzenden naar uw mobiele apparaat, e-mail en meer.",
     "DashboardTourScheduledTasks": "Beheer eenvoudig langlopende transacties met geplande taken. Beslis zelf wanneer ze worden uitgevoerd en hoe vaak.",
     "DashboardTourMobile": "Het dashboard van Media Browser werkt geweldig op smartphones en tablets. Beheer je server vanuit de palm van je hand, overal en altijd.",
-    "DashboardTourSync": "Sync your personal media to your devices for offline viewing.",
+    "DashboardTourSync": "Synchroniseer je persoonlijke media naar je apparaten om het offline te bekijken.",
     "MessageRefreshQueued": "Vernieuwen wachtrij",
     "TabDevices": "Apparaten",
     "TabExtras": "Extra's",
@@ -702,7 +702,7 @@
     "LabelSyncTo": "Synchroniseer naar:",
     "LabelSyncJobName": "Naam synchroniseer taak:",
     "LabelQuality": "Kwaliteit",
-    "OptionOriginal": "Original",
+    "OptionOriginal": "Origineel",
     "OptionHigh": "Hoog",
     "OptionMedium": "Gemiddeld",
     "OptionLow": "Laag",
