--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -640,7 +640,7 @@
     "WebClientTourMetadataManager": "Clique em editar para abrir o gerenciador de metadados",
     "WebClientTourPlaylists": "Crie listas de reprodu\u00e7\u00e3o e mixes instant\u00e2neos e reproduza-os em qualquer dispositivo",
     "WebClientTourCollections": "Crie cole\u00e7\u00f5es de filmes para agrupar colet\u00e2neas",
-    "WebClientTourUserPreferences1": "As prefer\u00eancias do usu\u00e1rio permite que voc\u00e9 personalize como sua biblioteca \u00e9 exibida em qualquer uma das apps do Media Browser",
+    "WebClientTourUserPreferences1": "As prefer\u00eancias do usu\u00e1rio permitem que voc\u00ea personalize como sua biblioteca \u00e9 exibida em qualquer uma das apps do Media Browser",
     "WebClientTourUserPreferences2": "Configure o idioma de \u00e1udio e legendas apenas uma vez, para todas as apps do Media Browser",
     "WebClientTourUserPreferences3": "Defina a p\u00e1gina de in\u00edcio do cliente web, do seu gosto",
     "WebClientTourUserPreferences4": "Configure imagens de fundo, m\u00fasicas-tema e reprodutores externos",
