aadd sync services tab

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -38,6 +38,16 @@
     "ErrorLaunchingChromecast": "There was an error launching chromecast. Please ensure your device is connected to your wireless network.",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
+    "PluginCategoryGeneral": "General",
+    "PluginCategoryContentProvider": "Content Providers",
+    "PluginCategoryScreenSaver": "Screen Savers",
+    "PluginCategoryTheme": "Themes",
+    "PluginCategorySync": "Sync",
+    "PluginCategorySocialIntegration": "Social Networks",
+    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryMetadata": "Metadata",
+    "PluginCategoryLiveTV": "Live TV",
+    "PluginCategoryChannel": "Channels",
     "HeaderSearch": "Search",
     "ValueDateCreated": "Date created: {0}",
     "LabelArtist": "Artist",
