--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -61,6 +61,9 @@
     "HeaderEasyPinCode": "Easy Pin Code",
     "HeaderGrownupsOnly": "Grown-ups Only!",
     "DividerOr": "-- or --",
+    "HeaderInstalledServices": "Installed Services",
+    "HeaderAvailableServices": "Available Services",
+    "MessageNoServicesInstalled": "No services are currently installed.",
     "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
     "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
     "ButtonConfigurePinCode": "Configure pin code",
