--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -226,7 +226,7 @@
     "ScheduledTasksTitle": "Scheduled Tasks",
     "TabMyPlugins": "My Plugins",
     "TabCatalog": "Catalog",
-    "PluginsTitle": "Plugins",
+    "TitlePlugins": "Plugins",
     "HeaderAutomaticUpdates": "Automatic Updates",
     "HeaderNowPlaying": "Now Playing",
     "HeaderLatestAlbums": "Latest Albums",
